added images to instruction page

--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -594,3 +594,7 @@ span.arrow-back-to-top.glyphicon.glyphicon-chevron-up:active {
 .mailto-text{
   color: #333;
 }
+
+.instructions {
+  clear: left;
+}
