--- a/public/partial/recipes.html
+++ b/public/partial/recipes.html
@@ -9,7 +9,9 @@
                     <div class="filter-loop" ng-repeat="cuisine in cuisines">
                         <a  ng-attr-id="{{cuisine}}" ng-click="changeSelection(filters.cuisine, cuisine)" class="btn btn-filter">{{cuisine|capitalize}}</a>
                     </div>
-                    <a ="none1" ng-click="removeFilters(filters.cuisine)" class="btn btn-filter-none">Remove</a>
+                    <a ="none1" ng-click="removeFilters(filters.cuisine)" class="btn btn-filter-none">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
 
@@ -22,7 +24,9 @@
                     <div class="filter-loop" ng-repeat="diet in diets">
                         <a  ng-attr-id="{{diet}}" ng-click="changeSelection(filters.diet, diet)" class="btn btn-filter">{{diet|capitalize}}</a>
                     </div>
-                    <a id="none2" ng-click="removeFilters(filters.diet)" class="btn btn-filter-none">Remove</a>
+                    <a id="none2" ng-click="removeFilters(filters.diet)" class="btn btn-filter-none">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </a>
 
                 </div>
             </div>
