--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container">
+    <div class="container" ng-init="submittedSearch=false">
         <div class="row">
             <h1>{{chosenRecipe[0].title}}</h1>
             <div class="col-md-6">
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <img ng-src="{{chosenRecipe[0].image}}" class="img-fluid img-uniform" alt="Responsive image">
             </div>
-            <div ng-if="!chosenRecipe[0].extendedIngredients" class="alert alert-danger alert-dismissible centre-custom">
+            <div ng-if="!chosenRecipe[0].extendedIngredients && submittedSearch" class="alert alert-danger alert-dismissible centre-custom">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div ng-if="!chosenRecipe[0].instructions" class="alert alert-danger alert-dismissible centre-custom">
+        <div ng-if="!chosenRecipe[0].instructions && submittedSearch" class="alert alert-danger alert-dismissible centre-custom">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
