--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -44,6 +44,8 @@ under the title of recipeApp -->
     <!-- Services -->
     <script src="js/services/recipeService.js"></script>
     <script src="js/services/listService.js"></script>
+    <script src="js/services/constantService.js"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
