partial bug fix for page reload

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -11,7 +11,7 @@ under the title of recipeApp -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Recipe Searching Application">
-    <base href="/">
+    <base href="/index.html">
     <title>Roasted Pepper</title>
 
     <!-- Angular files -->
