Error message appears for ingredients, Shopping list has an ID

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -62,7 +62,7 @@ under the title of recipeApp -->
             <div class="panel panel-default panel-text-color">
               <div class="header-content-inner text-primary">
                 <h1 id="homeHeading" class="title-custom">Roasted Pepper</h1>
-                <a ng-href="/index" class="btn btn-primary btn-xl page-scroll">Start your recipe search!</a>
+                <a ng-href="/index; #search" class="btn btn-primary btn-xl page-scroll">Start your recipe search!</a>
                 <a ng-href="/index/list" class="btn btn-primary btn-xl" >Build a Shopping List!</a>
             </div>
         </div>
