--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div ng-if="!chosenRecipe[0].instructions && submittedSearch" class="alert alert-danger alert-dismissible centre-custom">
+        <div ng-if="!chosenRecipe[0].instructions" class="alert alert-danger alert-dismissible centre-custom">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
