--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -15,9 +15,8 @@ under the title of recipeApp -->
     <title>Roasted Pepper</title>
 
     <!-- Angular files -->
-    <script src="js/angular/angular.js"></script>
-    <script src="js/angular/angular-route.js"></script>
-    <script src="js/angular/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="js/recipe-app.js"></script>
 
