New specific css for recipe button

--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -34,7 +34,7 @@
                 </div>
                 <div alert-needed></div>
                 <div class="centre-filters">
-                    <a ng-click="addToShoppingList(chosenRecipe[0]); addedToShoppingList=true" class="btn btn-filter centre-custom">
+                    <a ng-click="addToShoppingList(chosenRecipe[0]); addedToShoppingList=true" class="btn btn-filter-recipe centre-custom">
                         Add ingredients to shopping list</a>
                 </div>
                 <div ng-show="addedToShoppingList" class="alert alert-success alert-dismissible centre-custom">
