--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -431,6 +431,13 @@ a.btn-filter{
     background-color: #FFF;
     border: 1px solid #F05F40;
     font-size: 20px;
+    width: 140px;
+}
+a.btn-filter-recipe{
+    color: #F05F40;
+    background-color: #FFF;
+    border: 1px solid #F05F40;
+    font-size: 20px;
 }
 a.btn-get{
     color: #F05F40;
