Change error message

--- a/public/partial/details.html
+++ b/public/partial/details.html
@@ -16,7 +16,7 @@
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    No ingredients found for this recipe
+                    Sorr, no ingredients found for this recipe!
                 </div>
                 <h2 class="instructions">Instructions:</h2>
                 <div ng-repeat="instructionParts in instructions">
@@ -30,7 +30,7 @@
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    No instructions found for this recipe
+                    Sorry, no instructions found for this recipe!
                 </div>
                 <div alert-needed></div>
                 <div class="centre-filters">
