--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Creative v3.3.7+1 (http://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
 html,
 body {
   height: 100%;
@@ -420,118 +415,101 @@ body {
   margin-bottom: 5%;
   margin-top: 2%;
 }
-
 .filter-loop{
   display: inline-block;
   margin-top:2px;
   margin-bottom:2px;
 }
 a.btn-filter{
-    color: #F05F40;
-    background-color: #FFF;
-    border: 1px solid #F05F40;
-    font-size: 20px;
-    width: 140px;
+  color: #F05F40;
+  background-color: #FFF;
+  border: 1px solid #F05F40;
+  font-size: 20px;
+  width: 140px;
 }
 a.btn-filter-recipe{
-    color: #F05F40;
-    background-color: #FFF;
-    border: 1px solid #F05F40;
-    font-size: 20px;
+  color: #F05F40;
+  background-color: #FFF;
+  border: 1px solid #F05F40;
+  font-size: 20px;
 }
 a.btn-get{
-    color: #F05F40;
-    background-color: #FFF;
-    border: 1px solid #F05F40;
-    font-size: 20px;
+  color: #F05F40;
+  background-color: #FFF;
+  border: 1px solid #F05F40;
+  font-size: 20px;
 }
 a.btn-filter-none{
-    color: #F05F40;
-    background-color: #FFF;
-    border: 1px solid #F05F40;
-    font-size: 20px;
+  color: #F05F40;
+  background-color: #FFF;
+  border: 1px solid #F05F40;
+  font-size: 20px;
 }
 a.btn-filter:hover{
   color: #be2e0e;
 }
-
 a.btn-filter-none:hover{
   color: #be2e0e;
 }
-
 .centre-filters a.filter-added:hover{
   color: #be2e0e;
   width: 140px;
 }
-
 .centre-filters a.filter-added:focus{
   color: #be2e0e;
   width: 140px;
 }
-
 .filter-added{
-    color: #FFF;
-    background-color: #F05F40;
-    border: 1px solid #F05F40;
-    font-size: 20px;
-    width: 140px;
+  color: #FFF;
+  background-color: #F05F40;
+  border: 1px solid #F05F40;
+  font-size: 20px;
+  width: 140px;
 }
-
 .img-uniform{
-    position: relative;
-    float: left;
-    width:  250px;
-    height: 250px;
-    background-position: 50% 50%;
-    background-repeat:   no-repeat;
-    background-size:     cover;
-    margin: 15px;
+  position: relative;
+  float: left;
+  width:  250px;
+  height: 250px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+  margin: 15px;
 }
-
 .recipe-summary{
   color: #000;
   padding: 20px;
 }
-
 .centre-custom{
   text-align: center;
 }
-
 #contact{
   background-color: #F05F40;
 }
-
 .white-text{
   color: #FFF; 
 }
-
 .black-text{
   color: #000; 
 }
-
 .red-text{
   color:#F05F40;
 }
-
 .filter-wrapper{
   padding-bottom: 0px;
 }
-
 .header-content .header-content-inner .title-custom{
   font-weight: 400;
   font-family: 'tangerine', 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
   font-size: 100px;
   margin-top: 40px;
 }
-
 .header-content .header-content-inner .hr-custom{
   margin: 0px auto 20px auto;
 }
-
 .cuisine-selection{
   padding:0px;
 }
-
 .edit-ingredient{
   float: left; 
   border-radius: 0px 4px 4px 0px;
@@ -539,27 +517,23 @@ a.btn-filter-none:hover{
   width: 20%;
   margin: 0px;
 }
-
 .input-ingredient{
   margin: auto;
   float:left;
   width: 80%;
   border-radius: 4px 4px 0px 0px;
 }
-
 .list-entry{
   padding-bottom: 20px;
   margin: 0px auto 10px auto;
   width: 80%;
   height: 34px;
 }
-
 .list-items{
   clear:left;
   margin: auto;
   width: 80%;
 }
-
 .back-to-top {
   cursor: pointer;
   position: fixed;
@@ -575,42 +549,33 @@ a.btn-filter-none:hover{
   border: 2px solid #F05F40;
 
 }
-
 .arrow-back-to-top{
   top:5px;
   color: #F05F40;
 }
-
-
 a #back-to-top:active{
   background-color: #004d00;
   border-color: #003300;
 }
-
-
 .back-to-top:hover .arrow-back-to-top {
   color: white;
 }
-
 .contact-name:hover{
   color: black;
 }
-
 span.arrow-back-to-top.glyphicon.glyphicon-chevron-up:active {
-    color: #fff;
+  color: #fff;
 }
-
 .input-label {
-  color: #ccc
+  color: #ccc;
+  font-family: 'Arial';
 }
 .mailto-text{
   color: #333;
 }
-
 .instructions {
   clear: left;
 }
-
 @media (max-width: 310px) {
   .trash {
     clear: left;
